toolchain/chidori-static-analysis/src/language/python/snapshots/chidori_static_analysis__language__python__parse__tests__ch_function_decoration_referring_to_another_function.snap
---
source: chidori-static-analysis/src/language/python/parse.rs
expression: context_stack_references
---
- - InFunction:
      - setup_pipeline
      - start: 25
        end: 60
- - InFunction:
      - setup_pipeline
      - start: 25
        end: 60
  - InFunctionDecorator: 0
  - InCallExpression
  - IdentifierReferredTo:
      name: create_dockerfile
      in_scope: false
      exposed: false
- - InFunction:
      - setup_pipeline
      - start: 25
        end: 60
  - InFunctionDecorator: 0
  - InCallExpression
  - Attribute: p
  - IdentifierReferredTo:
      name: ch
      in_scope: false
      exposed: false
- - InFunction:
      - setup_pipeline
      - start: 25
        end: 60
  - FunctionArguments
  - IdentifierReferredTo:
      name: x
      in_scope: false
      exposed: false
- - InFunction:
      - setup_pipeline
      - start: 25
        end: 60
  - IdentifierReferredTo:
      name: x
      in_scope: true
      exposed: false
