toolchain/chidori-static-analysis/src/language/python/snapshots/chidori_static_analysis__language__python__parse__tests__ch_reference_internal_to_function.snap
---
source: chidori-static-analysis/src/language/python/parse.rs
expression: context_stack_references
---
- - InFunction: evaluate_agent
- - InFunction: evaluate_agent
  - FunctionArguments
  - IdentifierReferredTo:
      - ev
      - false
- - InFunction: evaluate_agent
  - InCallExpression
  - Constant: file_path
- - InFunction: evaluate_agent
  - InCallExpression
  - Constant: file_path
  - Attribute: file_path
  - IdentifierReferredTo:
      - ev
      - true
- - InFunction: evaluate_agent
  - InCallExpression
  - Constant: file_path
  - Attribute: set
  - IdentifierReferredTo:
      - ch
      - false
- - InFunction: evaluate_agent
  - InCallExpression
  - IdentifierReferredTo:
      - migration_agent
      - false
