toolchain/chidori-static-analysis/src/language/python/snapshots/chidori_static_analysis__language__python__parse__tests__for_loop_assignments_are_captured.snap
---
source: chidori-static-analysis/src/language/python/parse.rs
expression: context_stack_references
---
- - InFunction: run_prompt
- - InFunction: run_prompt
  - AssignmentToStatement
  - IdentifierReferredTo:
      - out
      - false
- - InFunction: run_prompt
  - AssignmentFromStatement
  - Constant: ""
- - InFunction: run_prompt
  - AssignmentToStatement
  - IdentifierReferredTo:
      - state
      - false
- - InFunction: run_prompt
  - IdentifierReferredTo:
      - state
      - true
- - InFunction: run_prompt
  - InCallExpression
  - Constant: "\n"
- - InFunction: run_prompt
  - InCallExpression
  - Constant: "\n"
  - Attribute: split
  - InCallExpression
  - IdentifierReferredTo:
      - number_of_states
      - true
- - InFunction: run_prompt
  - InCallExpression
  - Constant: "\n"
  - Attribute: split
  - InCallExpression
  - IdentifierReferredTo:
      - get_states_first_letters
      - false
- - InFunction: run_prompt
  - IdentifierReferredTo:
      - out
      - true
- - InFunction: run_prompt
  - InCallExpression
  - IdentifierReferredTo:
      - state
      - true
- - InFunction: run_prompt
  - InCallExpression
  - IdentifierReferredTo:
      - first_letter
      - false
- - InFunction: run_prompt
  - Constant: demo
- - InFunction: run_prompt
  - Constant: demo
  - IdentifierReferredTo:
      - out
      - true
