toolchain/chidori-static-analysis/src/language/python/snapshots/chidori_static_analysis__language__python__parse__tests__nothing_extracted_with_no_ch_references.snap
---
source: chidori-static-analysis/src/language/python/parse.rs
description: "def create_dockerfile():\n    return prompt(\"prompts/create_dockerfile\")\n"
---
- - InFunction: create_dockerfile
- - InFunction: create_dockerfile
  - InCallExpression
  - Constant: prompts/create_dockerfile
- - InFunction: create_dockerfile
  - InCallExpression
  - Constant: prompts/create_dockerfile
  - IdentifierReferredTo:
      - prompt
      - false
