toolchain/chidori-static-analysis/src/language/python/snapshots/chidori_static_analysis__language__python__parse__tests__reference_to_undeclared_function-2.snap
---
source: chidori-static-analysis/src/language/python/parse.rs
description: "out = await read_file_and_load_to_memory(\"./\")\n"
---
internal_call_graph: {}
cell_exposed_values:
  out: {}
cell_depended_values:
  read_file_and_load_to_memory: {}
triggerable_functions: {}
